--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,30 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohappyeyeballs==2.6.1",
+    "aiohttp==3.13.3",
+    "aiosignal==1.4.0",
+    "anyio==4.12.1",
     "ascii-magic==2.7.4",
+    "attrs==25.4.0",
     "certifi==2026.1.4",
     "charset-normalizer==3.4.4",
     "click==8.3.1",
+    "frozenlist==1.8.0",
+    "h11==0.16.0",
+    "httpcore==1.0.9",
+    "httpx==0.28.1",
     "idna==3.11",
     "linkify-it-py==2.0.3",
     "markdown-it-py==4.0.0",
     "mdit-py-plugins==0.5.0",
     "mdurl==0.1.2",
+    "multidict==6.7.1",
     "nuitka==2.8.10",
     "ordered-set==4.1.0",
     "pillow==12.1.0",
     "platformdirs==4.5.1",
+    "propcache==0.4.1",
     "pygments==2.19.2",
     "requests==2.32.5",
     "rich==14.3.1",
@@ -27,5 +38,6 @@ dependencies = [
     "typing-extensions==4.15.0",
     "uc-micro-py==1.0.3",
     "urllib3==2.6.3",
+    "yarl==1.22.0",
     "zstandard==0.25.0",
 ]
