--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,13 @@ dependencies = [
     "aiosignal==1.4.0",
     "anyio==4.12.1",
     "ascii-magic==2.7.4",
+    "async-typer==0.1.10",
     "attrs==25.4.0",
     "certifi==2026.1.4",
     "charset-normalizer==3.4.4",
     "click==8.3.1",
+    "dotenv==0.9.9",
+    "faker==40.1.2",
     "frozenlist==1.8.0",
     "h11==0.16.0",
     "httpcore==1.0.9",
@@ -24,12 +27,14 @@ dependencies = [
     "mdit-py-plugins==0.5.0",
     "mdurl==0.1.2",
     "multidict==6.7.1",
+    "names==0.3.0",
     "nuitka==2.8.10",
     "ordered-set==4.1.0",
     "pillow==12.1.0",
     "platformdirs==4.5.1",
     "propcache==0.4.1",
     "pygments==2.19.2",
+    "python-dotenv==1.2.1",
     "requests==2.32.5",
     "rich==14.3.1",
     "shellingham==1.5.4",
