--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "mdurl==0.1.2",
     "multidict==6.7.1",
     "names==0.3.0",
+    "nest-asyncio==1.6.0",
     "nuitka==2.8.10",
     "ordered-set==4.1.0",
     "pillow==12.1.0",
@@ -39,6 +40,7 @@ dependencies = [
     "rich==14.3.1",
     "shellingham==1.5.4",
     "textual==7.5.0",
+    "textual-image==0.8.5",
     "typer==0.21.1",
     "typing-extensions==4.15.0",
     "uc-micro-py==1.0.3",
