--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "propcache==0.4.1",
     "pygments==2.19.2",
     "python-dotenv==1.2.1",
+    "questionary>=2.1.1",
     "requests==2.32.5",
     "rich==14.3.1",
     "shellingham==1.5.4",
