--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ readchar==4.2.1
 requests==2.32.5
 rich==14.3.1
 runs==1.3.0
+setuptools==82.0.0
 shellingham==1.5.4
 textual==7.5.0
 textual-image==0.8.5
