--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,18 @@ build-backend = "setuptools.build_meta"
 [project.scripts]
 dinodex = "dinodex:main"
 
-[tools.setuptools]
+[tool.setuptools]
 package-dir = {"" = "src"}
 include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+
+[tool.setuptools.package-data]
+# "mypackage" = ["assets/*.json", "assets/*.png", "assets/*.sql"]
+assets = ["*.png"]
+
+
+
+
