sketching out single dino export

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 # "mypackage" = ["assets/*.json", "assets/*.png", "assets/*.sql"]
-assets = ["*.png"]
+assets = ["*.png", "*.sql"]
 
 
 
